@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a view displaying the calculation times by source typology
   * Optimized the saving of the asset loss table
   * Fixed a bug with indices over the minimum IML when computing the loss
     ratios
